# dsync

./: .gitignore  README.md  pyproject.toml  sync5.py  sync_config.json  sync_config.yaml
sync_service/cli/: main.py
sync_service/config/: config_loader.py
sync_service/core/: handler.py  utils.py
sync_service/storage/: disk_utils.py
